[package]
name = "tracing-indicatif"
version = "0.1.0"
authors = ["Boncheol Gu <boncheol.gu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.2.13", features = ["json", "chrono"] }
indicatif = "0.15.0"

[dev-dependencies]
rayon = "1.5.0"
